# scribble-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  vault_api.py
src/scribble_mcp/: __init__.py  __main__.py  server.py
