[project]
name = "scribble-mcp"
version = "0.1.0"
description = "MCP server for an LLM Wiki Vault — read, search, and append to knowledge notes"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
scribble-mcp = "scribble_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribble_mcp"]